webflask-postgres/todoapplication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: todoapplication
  name: todoapplication
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: todoapplication
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/lan_network: "true"
        io.kompose.service: todoapplication
    spec:
      containers:
        - image: todoapplication
          name: todoapplication
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /tmp
              name: todoapplication-claim0
      hostname: todo
      restartPolicy: Always
      volumes:
        - name: todoapplication-claim0
          persistentVolumeClaim:
            claimName: todoapplication-claim0
status: {}
