webflask-postgres/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "6432"
      port: 6432
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
