webflask-postgres/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        tier: backend
        track: stable
    spec:
      containers:
        - name: db
          image: "systemdevformations/docker-postgres12"
          ports:
            - name: db
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
    tier: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 5432
      targetPort: db
      nodePort: 32000
