webflask-postgres/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
    - name: "20100"
      port: 20100
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
