webflask-postgres/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  selector:
    matchLabels:
      app: pgadmin
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
        tier: frontend
        track: stable
    spec:
      containers:
        - name: pgadmin
          image: "dpage/pgadmin4"
          ports:
            - name: pgadmin
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  selector:
    app: pgadmin
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: pgadmin
  type: NodePort
