webflask-postgres/todoapplication-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: todoapplication
  name: todoapplication
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: todoapplication
status:
  loadBalancer: {}
